--- a/css/style.css
+++ b/css/style.css
@@ -491,23 +491,29 @@ input[type="text"]
 
 .lodgingcards-bloc {
   display: flex;
-  width: 66%;
+  width: fit-content;
   background-color: #F2F2F2;
   margin-top: 25px;
 }
 
+.lodgingcards-bloc h1 {
+  margin-left: 20px;
+}
+
 #lodging-cards {
   display: flex;
+  flex-direction: column;
 }
 
 .lodginginfos-container {
   display: flex;
   flex-direction: column;
-  width: 250px;
-  height: 200px;
+  width: 275px;
+  height: 225px;
   background-color: white;
   padding: 5px 5px 10px 5px;
   margin: 0px 20px 20px 20px;
+  border-radius: 20px;
 }
 
 .lodgings-img-container {
@@ -515,6 +521,7 @@ input[type="text"]
   width: 100%;
   height: 60%;
 }
+
 
 .lodgings-text-container {
   display: flex;
@@ -533,20 +540,46 @@ input[type="text"]
   /* (object-fit: cover) ==> Le contenu remplacé est dimensionné pour maintenir son ratio d'affichage tout en remplissant toute la boîte de contenu.
   La taille réelle est calculée pour couvrir la zone décrite par la hauteur et la largeur de l'élément.
   Si les ratios de l'objet et de la boîte ne correspondent pas, le contenu remplacé sera rogné.*/
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
 }
 
 .bluestar-ico:before {
   content: "\f005" "\f005" "\f005" "\f005"; /* Code de l'icone dans la base FontAwesome*/
   font-family: FontAwesome;
-  font-size: 21px;
+  font-size: 15px;
   color: #0065FC;
 }
 
 .greystar-ico:after {
   content:"\f005"; /* Code de l'icone dans la base FontAwesome*/
   font-family: FontAwesome;
-  font-size: 21px;
+  font-size: 15px;
   color: #bfbfbf;
 }
+
+a.clickable-card { /* Technique de sioux pour rendre toute la div clickable */
+  display: block;
+  height: 100%;
+  width: 100%;
+  text-decoration: none;
+}
+
+.lodginginfos-container:hover {
+  background-color: #DEEBFF;
+}
+
+#topline-cards {
+  display: flex;
+}
+
+#botline-cards {
+  display: flex;
+}
+
+
+
+
+
 
 /* footer */
