--- a/css/style.css
+++ b/css/style.css
@@ -14,13 +14,21 @@
    
   @font-face { /* Gestion police du texte */
     font-family: 'Raleway';
-    src: url('../assets/polices/Raleway-Medium.ttf');
+    src: url('../assets/polices/Raleway-Regular.ttf');
+  }
+
+  @font-face { /* Gestion police du texte */
+    font-family: 'RalewayBold';
+    src: url('../assets/polices/Raleway-SemiBold.ttf');
   }
 
   body {
-      font-family: 'Raleway', Impact, "Arial Black", Arial, Verdana, sans-serif;
-      
+      font-family: 'Raleway', Impact, "Arial Black", Arial, Verdana, sans-serif;   
   }
+  
+  body h1,h2,h3,h4,h5,h6 { /* Les titres sont légerement plus gras sur la maquette */
+    font-family: 'RalewayBold', Impact, "Arial Black", Arial, Verdana, sans-serif;   
+}
 
 /*Gestion des icones Font Awesome*/
 @font-face {
@@ -334,6 +342,7 @@ input[type="text"]
 }
 
 #filter-bloc p {
+  font-family: 'RalewayBold';
   font-weight: bold;
   margin-right: 5px;
   font-size: 120%;
@@ -491,9 +500,11 @@ input[type="text"]
 
 .lodgingcards-bloc {
   display: flex;
-  width: fit-content;
+  width: 70%;
   background-color: #F2F2F2;
   margin-top: 25px;
+  border-radius: 20px;
+  padding: 25px 25px 25px 25px;
 }
 
 .lodgingcards-bloc h1 {
@@ -508,8 +519,8 @@ input[type="text"]
 .lodginginfos-container {
   display: flex;
   flex-direction: column;
-  width: 275px;
-  height: 225px;
+  width: 100%;
+  height: 300px;
   background-color: white;
   padding: 5px 5px 10px 5px;
   margin: 0px 20px 20px 20px;
@@ -519,13 +530,15 @@ input[type="text"]
 .lodgings-img-container {
   display: flex;
   width: 100%;
-  height: 60%;
+  height: 65%;
 }
 
 
 .lodgings-text-container {
+  height:35%;
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
   margin: 5px 0px 5px 5px;
 }
 
@@ -558,8 +571,14 @@ input[type="text"]
   color: #bfbfbf;
 }
 
-a.clickable-card { /* Technique de sioux pour rendre toute la div clickable */
-  display: block;
+.onebluestar-ico:before {
+  content: "\f005"; /* Code de l'icone dans la base FontAwesome*/
+  font-family: FontAwesome;
+  font-size: 15px;
+  color: #0065FC;
+}
+
+a.clickable-card { /* Rendre toute la div clickable */
   height: 100%;
   width: 100%;
   text-decoration: none;
@@ -571,13 +590,104 @@ a.clickable-card { /* Technique de sioux pour rendre toute la div clickable */
 
 #topline-cards {
   display: flex;
+  margin-bottom: 22px;
 }
 
 #botline-cards {
   display: flex;
 }
 
+.lonely-text {
+  font-weight: bold;
+  font-size: 120%;
+  margin-bottom: 10px;
+  margin-left: 25px;
+  font-family: 'RalewayBold';
+}
 
+.lonely-text:hover {
+  text-decoration: underline;
+}
+
+/* Partie "Les plus populaires" */
+
+#lodgings-plus-popular-bloc {
+  display: flex;
+}
+
+.popularcards-bloc {
+  display: flex;
+  flex-direction: column;
+  width: 30%;
+  background-color: #F2F2F2;
+  margin-top: 25px;
+  margin-left: 45px;
+  border-radius: 20px;
+}
+
+#popular-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 10px 25px 7px 25px;
+  font-size: 130%;
+  font-weight: bold;
+}
+
+.graph-ico:after {
+  content: "\f201"; /* Code de l'icone dans la base FontAwesome*/
+  font-family: FontAwesome;
+  font-size: 30px;
+  color: black;
+}
+
+#popular-cards {
+  display: flex;
+  flex-direction: column;
+}
+
+.popularinfos-container {
+  display: flex;
+  width: auto;
+  height: 200px;
+  background-color: white;
+  padding: 5px 5px 10px 5px;
+  margin: 0px 20px 20px 20px;
+  border-radius: 20px;
+}
+
+.popular-img-container {
+  display: flex;
+  width: 40%;
+  height: 100%;
+}
+
+.popular-text-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 5px 0px 5px 5px;
+  width: 50%;
+}
+
+.popular-img-container img {
+  width: 100%;
+  object-fit: cover; 
+  /* (object-fit: cover) ==> Le contenu remplacé est dimensionné pour maintenir son ratio d'affichage tout en remplissant toute la boîte de contenu.
+  La taille réelle est calculée pour couvrir la zone décrite par la hauteur et la largeur de l'élément.
+  Si les ratios de l'objet et de la boîte ne correspondent pas, le contenu remplacé sera rogné.*/
+  border-top-left-radius: 15px;
+  border-bottom-left-radius: 15px;
+}
+
+.popular-text-container h3,p,span {
+  margin: 0;
+  margin-top: 3px;
+}
+
+.popularinfos-container:hover {
+  background-color: #DEEBFF;
+}
 
 
 
