--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@
 
 #container { /* Tout le contenu de la page */
   width: auto; 
-  min-width: 480px;
+  min-width: 320px;
   
 }
 
@@ -504,7 +504,7 @@ input[type="text"]
   background-color: #F2F2F2;
   margin-top: 25px;
   border-radius: 20px;
-  padding: 25px 25px 25px 25px;
+  padding: 15px 25px 15px 25px;
 }
 
 .lodgingcards-bloc h1 {
@@ -520,22 +520,23 @@ input[type="text"]
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 300px;
+  height: 275px;
   background-color: white;
   padding: 5px 5px 10px 5px;
   margin: 0px 20px 20px 20px;
   border-radius: 20px;
+  box-shadow: 1px 1px 7px #bfbfbf; /* offset-x | offset-y | blur-radius | color */
 }
 
 .lodgings-img-container {
   display: flex;
   width: 100%;
-  height: 65%;
+  height: 60%;
 }
 
 
 .lodgings-text-container {
-  height:35%;
+  height:40%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -623,6 +624,8 @@ a.clickable-card { /* Rendre toute la div clickable */
   margin-top: 25px;
   margin-left: 45px;
   border-radius: 20px;
+  padding-left: 15px;
+  padding-right: 20px;
 }
 
 #popular-title {
@@ -649,17 +652,19 @@ a.clickable-card { /* Rendre toute la div clickable */
 .popularinfos-container {
   display: flex;
   width: auto;
-  height: 200px;
+  height: 175px;
   background-color: white;
-  padding: 5px 5px 10px 5px;
-  margin: 0px 20px 20px 20px;
+  padding: 5px 5px 5px 5px;
+  margin: 0px 20px 35px 20px;
   border-radius: 20px;
+  box-shadow: 1px 1px 7px #bfbfbf; /* offset-x | offset-y | blur-radius | color */
 }
 
 .popular-img-container {
   display: flex;
   width: 40%;
   height: 100%;
+  margin-right: 20px;
 }
 
 .popular-text-container {
@@ -668,6 +673,11 @@ a.clickable-card { /* Rendre toute la div clickable */
   justify-content: space-between;
   margin: 5px 0px 5px 5px;
   width: 50%;
+  font-size: 120%;
+}
+
+.popular-text-container p {
+  margin-top: 10px;
 }
 
 .popular-img-container img {
@@ -689,7 +699,140 @@ a.clickable-card { /* Rendre toute la div clickable */
   background-color: #DEEBFF;
 }
 
+.bottom-stars {
+  margin-bottom: 5px;
+}
 
+/* J'ajoute un traitement particulier pour cette partie principale "Hebergements + populaires"
+ pour des raisons esthétiques, je ne veux pas que le contenu soit trop resserré si le visiteur
+  décide de réduire sa fenêtre ou qu'il utilise un petit ordinateur portable mais que ça ne déclenche pas le breakpoint à 992px */
+  @media all and (max-width: 1550px) {
+  
+    .lodgingcards-bloc {
+      width: 65%;
+      margin: 25px 25px 0px 25px;
+    }
+  
+    .popularcards-bloc {
+      width: 35%;
+      margin-left: 0px;
+    }
+  
+  }
+
+/* J'ajoute un traitement particulier pour cette partie principale "Hebergements + populaires"
+ pour des raisons esthétiques, je ne veux pas que le contenu soit trop resserré si le visiteur
+  décide de réduire sa fenêtre ou qu'il utilise un petit ordinateur portable mais que ça ne déclenche pas le breakpoint à 992px */
+@media all and (max-width: 1280px) {
+
+  #lodgings-plus-popular-bloc {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .lodgingcards-bloc {
+    width: 100%;
+    margin: 25px 25px 0px 25px;
+  }
+
+  .popularcards-bloc {
+    width: 100%;
+    margin-left: 0px;
+  }
+
+} 
+
+@media all and (max-width: 992px) /* Pour les écrans (Tablettes) dont la largeur ne dépasse pas 992px. */
+{
+  #lodgings-plus-popular-bloc {
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+
+  #topline-cards {
+    flex-direction: column;
+    margin-bottom: 1px;
+  }
+
+  #botline-cards {
+    flex-direction: column;
+  }
+
+  .popularcards-bloc {
+    width: fit-content;
+  }
+
+  .lodginginfos-container {
+    height: 350px;
+    margin-left: 0;
+
+  }
+
+  .lodgings-img-container {
+    height: 70%;
+  }
+
+  .lodgings-text-container {
+    height: 30%;
+    align-items: center;
+  }
+
+  .lodgingcards-bloc {
+    padding: 0px 35px 0px 35px;
+  }
+}
+
+
+@media all and (max-width: 768px) /* Pour les écrans (Mobiles) dont la largeur ne dépasse pas 768px. */
+{
+  #lodgings-plus-popular-bloc {
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+
+  #topline-cards {
+    flex-direction: column;
+    margin-bottom: 1px;
+  }
+
+  #botline-cards {
+    flex-direction: column;
+  }
+
+  .popularcards-bloc {
+    width: fit-content;
+  }
+
+  .popularinfos-container {
+    margin-bottom: 15px;
+  }
+
+  .popular-text-container {
+    font-size: 105%;
+  }
+
+  .lodgingcards-bloc {
+    background-color: white;
+  }
+
+  .lodginginfos-container {
+    height: 250px;
+    margin-left: 0;
+  }
+
+  .lodgings-img-container {
+    height: 60%;
+  }
+
+  .lodgings-text-container {
+    height: 40%;
+    align-items: flex-start;
+  }
+
+  .lodgingcards-bloc {
+    padding: 0px 35px 0px 35px;
+  }
+}
 
 
 /* footer */
