--- a/css/style.css
+++ b/css/style.css
@@ -780,6 +780,12 @@ a.clickable-card { /* Rendre toute la div clickable */
 
   .lodgingcards-bloc {
     padding: 0px 35px 0px 35px;
+    background-color: inherit;
+  }
+
+  .lonely-text {
+    font-size: 150%;
+    margin: 10px 0px 0px 0px;
   }
 }
 
@@ -802,6 +808,9 @@ a.clickable-card { /* Rendre toute la div clickable */
 
   .popularcards-bloc {
     width: fit-content;
+    padding-left: 0px;
+    padding-right: 0px;
+    border-radius: inherit; /* pas de border radius sur la version mobile */
   }
 
   .popularinfos-container {
@@ -813,7 +822,7 @@ a.clickable-card { /* Rendre toute la div clickable */
   }
 
   .lodgingcards-bloc {
-    background-color: white;
+    background-color: inherit;
   }
 
   .lodginginfos-container {
@@ -831,8 +840,16 @@ a.clickable-card { /* Rendre toute la div clickable */
   }
 
   .lodgingcards-bloc {
-    padding: 0px 35px 0px 35px;
+    padding: 0px 19px 0px 19px;
   }
+
+  .lonely-text {
+    font-size: 150%;
+    margin: 10px 0px 0px 0px;
+  }
+
+
+
 }
 
 /* Partie Activités */
@@ -1025,11 +1042,173 @@ a.clickable-card { /* Rendre toute la div clickable */
   background-color: #DEEBFF;
 }
 
+@media all and (max-width: 992px) /* Pour les écrans (Tablettes) dont la largeur ne dépasse pas 992px. */
+{
+  #activities-cards {
+    flex-direction: column;
+    height: 400px; /* on adapte la hauteur aux tablettes */
+    padding: 0px 35px 0px 35px;
+  }
 
+  #activities-title {
+    font-size: 110%;
+    padding: 0px 35px 0px 35px;
+    margin-bottom: 15px;
+  }
 
+  .vieuxport-bloc {
+    margin-bottom: 40px;
+  }
 
+  .fortpomegues-bloc {
+    margin-bottom: 40px;
+  }
+  
+  .frioulisland-bloc {
+    margin-bottom: 40px;
+  }
+  
+  .calanques-bloc {
+    margin-bottom: 40px;
+  }
+  
+  .notredame-bloc {
+    margin-bottom: 40px;
+  }
 
+  .activities-img-container {
+    display: flex;
+    width: 100%;
+    height: 340px;
+    margin-right: 20px;
+  }
+  
+  /* Gestion des hauteurs spécifiques pour certaines cards */
+  .activities-img-container-fortpomegues {
+    display: flex;
+    width: 100%;
+    height: 340px;
+    margin-right: 20px;
+  }
+  
+  .activities-img-container-frioulisland {
+    display: flex;
+    width: 100%;
+    height: 340px;
+    margin-right: 20px;
+  }
+  
+  .activities-img-container-notredame {
+    display: flex;
+    width: 100%;
+    height: 340px;
+    margin-right: 20px;
+  }
+  
+  .activities-img-container-longchamp {
+    display: flex;
+    width: 100%;
+    height: 340px;
+    margin-right: 20px;
+  }
+  
+  /* Hauteur standard (60px) pour la partie texte de chaque card */
+  .bloc-name {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding-left: 20px;
+    height: 60px;
+    font-size: 95%;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+  }
+  
+}
 
+@media all and (max-width: 768px) /* Pour les écrans (Mobiles) dont la largeur ne dépasse pas 768px. */
+{
+  #activities-cards {
+    flex-direction: column;
+    height: 250px; /* on adapte la hauteur aux mobiles*/
+    padding: 0px 19px 0px 19px;
+  }
 
+  #activities-title {
+    font-size: 110%;
+    padding: 0px 19px 0px 19px;
+    margin-bottom: 15px;
+  }
+
+  .vieuxport-bloc {
+    margin-bottom: 35px;
+  }
+
+  .fortpomegues-bloc {
+    margin-bottom: 35px;
+  }
+  
+  .frioulisland-bloc {
+    margin-bottom: 35px;
+  }
+  
+  .calanques-bloc {
+    margin-bottom: 35px;
+  }
+  
+  .notredame-bloc {
+    margin-bottom: 35px;
+  }
+
+  .activities-img-container {
+    display: flex;
+    width: 100%;
+    height: 180px;
+    margin-right: 20px;
+  }
+  
+  /* Gestion des hauteurs spécifiques pour certaines cards */
+  .activities-img-container-fortpomegues {
+    display: flex;
+    width: 100%;
+    height: 180px;
+    margin-right: 20px;
+  }
+  
+  .activities-img-container-frioulisland {
+    display: flex;
+    width: 100%;
+    height: 180px;
+    margin-right: 20px;
+  }
+  
+  .activities-img-container-notredame {
+    display: flex;
+    width: 100%;
+    height: 180px;
+    margin-right: 20px;
+  }
+  
+  .activities-img-container-longchamp {
+    display: flex;
+    width: 100%;
+    height: 180px;
+    margin-right: 20px;
+  }
+  
+  /* Hauteur standard (60px) pour la partie texte de chaque card */
+  .bloc-name {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding-left: 20px;
+    height: 70px;
+    font-size: 95%;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+  }
+
+}
 
 /* footer */
+
