--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@
 #container { /* Tout le contenu de la page */
   width: auto; 
   min-width: 320px;
+  min-height:100vh; /* hauteur au minimum égale à la hauteur du viewport */ 
 }
 
 ul {
@@ -1046,6 +1047,7 @@ a.clickable-card { /* Rendre toute la div clickable */
     display: flex;
     flex-direction: column;
     width: 100%;
+    height: 2700px;
     margin: 25px 0px 25px 0px; 
   }
 
@@ -1133,6 +1135,15 @@ a.clickable-card { /* Rendre toute la div clickable */
 
 @media all and (max-width: 768px) /* Pour les écrans (Mobiles) dont la largeur ne dépasse pas 768px. */
 {
+
+  .activities-bloc {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 1775px;
+    margin: 25px 0px 25px 0px; 
+  }
+
   #activities-cards {
     flex-direction: column;
     height: 250px; /* on adapte la hauteur aux mobiles*/
@@ -1220,7 +1231,8 @@ a.clickable-card { /* Rendre toute la div clickable */
 #footer-bloc {
   display: flex;
   background-color: #F2F2F2;
-  padding: 25px 35px 25px 35px;
+  padding: 25px 35px 35px 35px;
+  
 }
 
 #specific-width {
@@ -1248,14 +1260,57 @@ a.clickable-card { /* Rendre toute la div clickable */
 
 @media all and (max-width: 992px) /* Pour les écrans (Tablettes) dont la largeur ne dépasse pas 992px. */
 {
+
+  #footer-bloc {
+    display: flex;
+    background-color: #F2F2F2;
+    padding: 25px 35px 35px 35px;
+    margin: 0px 35px 25px 35px;
+  }
+
   #specific-width {
     flex-direction: column;
+    align-items: center;
     width: 100%;
+  }
+
+  .footer-elements {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .footer-elements ul {
+    text-align: center;
+  }
+
+  .footer-elements li {
+    font-size: 120%;
+  }
+
+  .footer-elements h4 {
+    font-size: 140%;
   }
 
 }
 
 @media all and (max-width: 768px) /* Pour les écrans (Mobiles) dont la largeur ne dépasse pas 768px. */
 {
- 
+
+  #footer-bloc {
+    margin: 0px 25px 15px 25px;
+  }
+
+  #specific-width {
+    flex-direction: column;
+    align-items: inherit;
+  }
+
+  .footer-elements {
+    align-items: inherit;
+  }
+
+  .footer-elements ul {
+    text-align: inherit;
+  }
 }
